Spring 6 Update (Java 21, Tomcat 10) (#2238)
* Update Spring to 6.2 (managed by Spring Boot 3.4.1)

* Update tomcat references to 10.1

* Update log4j versions

* build: bump wfone-common to 1.5.0 and align the Jakarta/Spring 6.2/Jetty 11 dependency stack

wfone-common 1.3.x is a Java 8/Spring 5/javax.servlet build; SpringStringRestDAO in
that jar throws NoSuchMethodError against Spring 6's ResponseEntity descriptor. 1.5.0
is Spring 6.2.1/Jakarta/Java 21 and is the load-bearing change this branch depends on.

Also: dedupe the hand-pinned Jetty 9.4 artifacts behind a single jetty-bom 11.0.20
import (wfss-pointid-api had six of them listed twice, plus an orphaned
jetty-jsp:9.3.0.M1 with no Jetty 11 equivalent); drop the Spring 5.3.18/Spring
Security 5.5.7 dependencyManagement overrides in wfone-notifications-api that were
shadowing the Boot 3.4.1 BOM; pin mybatis 3.5.16/mybatis-spring 3.0.4 (Boot 3.4.1
doesn't manage mybatis, and 2.x is Spring 5); swap javax.validation-api for
jakarta.validation-api in the two *-model poms; drop the now-unneeded
javax.servlet-api/javax.mail/javax.validation/javax.ws.rs test-scope shims; restore
jakarta.servlet-api (provided) where it was dropped instead of relying on a
transitive compile-scope leak; and bump junit-jupiter/easymock to their
Jakarta-compatible versions.

* build: enable -parameters for Spring 6 parameter-name discovery

Spring 6 dropped LocalVariableTableParameterNameDiscoverer. Without -parameters,
any @RequestParam/@PathVariable/@QueryParam that omits an explicit value= silently
loses its parameter name and breaks at runtime instead of at compile time. This is
the highest-value latent-bug fix in the upgrade; isolated in its own commit since a
compiler-flag change affects every module and deserves review on its own.

* fix: add Jakarta EL implementation (expressly) for Hibernate Validator

Hibernate Validator's default message interpolator needs a Jakarta EL impl on the
classpath at runtime (ModelValidator -> BaseValid